Fixes wavefunction selection bug

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -350,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b325726f2379420f88e525393bbd6b96",
+       "model_id": "00a627b2b73a4d9f802554972fe73ff6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7780bacd3cc4fcc80c5b1fe3ab85067",
+       "model_id": "c15daaae705344f6b0a6c2bee5c881b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d82ee66af93c4e93a64517db40764779",
+       "model_id": "2b083cb4eae949508ad5cc138a70a10c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dce5ac8b744417393332e0ea90ee31f",
+       "model_id": "68ceceb40002494c99344453d2d9d01f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,13 +522,74 @@
       "[[ 0.50002321  0.         -0.70713934  0.        ]\n",
       " [ 0.          1.50006926  0.         -1.22480066]\n",
       " [-0.70713934  0.          2.50011456  0.        ]\n",
-      " [ 0.         -1.22480066  0.          3.50015913]]\n"
+      " [ 0.         -1.22480066  0.          3.50015913]]\n",
+      "17\n",
+      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "Squared Wavefunction n=3\n",
+      "Squared Wavefunction n=3 Energy\n",
+      "Wavefunction n=3\n",
+      "Wavefunction n=3 Energy\n",
+      "Squared Wavefunction n=2\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "Wavefunction n=2\n",
+      "Wavefunction n=2 Energy\n",
+      "Squared Wavefunction n=1\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "Wavefunction n=1\n",
+      "Wavefunction n=1 Energy\n",
+      "Squared Wavefunction n=0\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "Wavefunction n=0\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "8\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  1\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  3\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=1 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  5\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  7\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=2 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  9\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  11\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=3 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  13\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=3 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  15\n",
+      "@@@@@@@@@@@@@@@\n",
+      "17\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861466cc8ffd4b9b9dcb1a6fc8701742",
+       "model_id": "8ba01307757b4fdd851a1c007e9d8dd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,7 +605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7633b84f85d454d8558f80c6343bff8",
+       "model_id": "b183b3202a6d4e4c8df6f75fd4aaef4d",
        "version_major": 2,
        "version_minor": 0
       },
