--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a2bb51cf6a84ec4849965d508197d88",
+       "model_id": "5aa721da48cc40c394f7615ae821ee0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc5e1576dbf547ae817ecbaa6e845629",
+       "model_id": "e354c3e89c1d451196bcca06d67dcaba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4d3356cdb5249b3bdded1290d669db7",
+       "model_id": "b3f7c4c455e04799ac892d33ef95a758",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,18 +247,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90dbaba3f9f34106945cd26d429fee9a",
+       "model_id": "68338b58ff33436e8fbd26ff967c8519",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-2169.78700338, max=0.0, min=-2169.78…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point from the PES in the form of (r, E): (1.1304593750689604, 2.169800291690002).\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0f7d2f6019c4201b0e05ba8b01dfa9b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
       ]
      },
      "metadata": {},
@@ -292,9 +315,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fitting.value(r):  86562.33682426663\n",
+      "2\n",
+      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f324babdfcf1491d91f84b2686ff3434",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Potential Energy Surface Fitting Method\n",
     "from morsePotential import *\n",
@@ -318,9 +368,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\\Comp_Chem_Package\\compChemGlobal.py:16: IntegrationWarning:\n",
+      "\n",
+      "The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T[1,1]:  1612.5523403837517\n",
+      "V[0,1]:  -132.27867559605755\n",
+      "H[1,1]: -375.8114562082976\n"
+     ]
+    }
+   ],
    "source": [
     "#Operators\n",
     "from operators import *\n",
@@ -360,9 +432,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "Squared Wavefunction n=2\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "Wavefunction n=2\n",
+      "Wavefunction n=2 Energy\n",
+      "Squared Wavefunction n=1\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "Wavefunction n=1\n",
+      "Wavefunction n=1 Energy\n",
+      "Squared Wavefunction n=0\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "Wavefunction n=0\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "6\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  1\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  3\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=1 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  5\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  7\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=2 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  9\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  11\n",
+      "@@@@@@@@@@@@@@@\n",
+      "12\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "065c36ead2104565b4ab2764c1b2a6b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "Squared Wavefunction n=2\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "Wavefunction n=2\n",
+      "Wavefunction n=2 Energy\n",
+      "Squared Wavefunction n=1\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "Wavefunction n=1\n",
+      "Wavefunction n=1 Energy\n",
+      "Squared Wavefunction n=0\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "Wavefunction n=0\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "6\n",
+      "Wavefunction n=0 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  1\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  3\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=1 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  5\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  7\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Wavefunction n=2 Energy\n",
+      "1\n",
+      "visible\n",
+      "index:  9\n",
+      "@@@@@@@@@@@@@@@\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "0\n",
+      "not visible\n",
+      "index:  11\n",
+      "@@@@@@@@@@@@@@@\n",
+      "13\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b861520687ed4ff589bac951e8741d60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wavefunction.value(r):  1080.5165887963026\n",
+      "\n",
+      "1\n",
+      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c553e9e664654ce0b52899e0ff9bdd01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Schrödinger Equation\n",
     "from schrodinger import *\n",
@@ -404,11 +642,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'CO', 'state': 'ground', 'T': 0.0, 'w': 2169.81358, 'wx': 13.28831, 'wy': 0, 'wz': 0, 'B': 1.93128087, 'a': 0.01750441, 'y': 0, 'D': 6.12147e-06, 're': 1.128323, 'u': 6.8562086380025615}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1^1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dc)"
+    "if (0):\n",
+    "    print(1)"
    ]
   },
   {
