Fixes issue with scaling and mode widgets

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -350,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00a627b2b73a4d9f802554972fe73ff6",
+       "model_id": "aed50d32827c47da8daef3b39bd42153",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c15daaae705344f6b0a6c2bee5c881b8",
+       "model_id": "83bb274f35e243dc85122722c9e000a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b083cb4eae949508ad5cc138a70a10c",
+       "model_id": "df4001147bff498b8f4e4dc5edf6ec13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68ceceb40002494c99344453d2d9d01f",
+       "model_id": "2c0123d2258b43709edfaae008476c61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,8 +523,7 @@
       " [ 0.          1.50006926  0.         -1.22480066]\n",
       " [-0.70713934  0.          2.50011456  0.        ]\n",
       " [ 0.         -1.22480066  0.          3.50015913]]\n",
-      "17\n",
-      "P{}P{}P{}P{}P{}P{}P{}P{}P{}P{}\n",
+      "Harmonic Oscilator PES\n",
       "Squared Wavefunction n=3\n",
       "Squared Wavefunction n=3 Energy\n",
       "Wavefunction n=3\n",
@@ -541,44 +540,62 @@
       "Squared Wavefunction n=0 Energy\n",
       "Wavefunction n=0\n",
       "Wavefunction n=0 Energy\n",
+      "17\n",
+      "Squared Wavefunction n=3\n",
+      "Squared Wavefunction n=3 Energy\n",
+      "Wavefunction n=3\n",
+      "Wavefunction n=3 Energy\n",
+      "Squared Wavefunction n=2\n",
+      "Squared Wavefunction n=2 Energy\n",
+      "Wavefunction n=2\n",
+      "Wavefunction n=2 Energy\n",
+      "Squared Wavefunction n=1\n",
+      "Squared Wavefunction n=1 Energy\n",
+      "Wavefunction n=1\n",
+      "Wavefunction n=1 Energy\n",
+      "Squared Wavefunction n=0\n",
+      "Squared Wavefunction n=0 Energy\n",
+      "Wavefunction n=0\n",
+      "Wavefunction n=0 Energy\n",
+      "[0, 1, 2, 3, 4]\n",
       "1\n",
       "8\n",
-      "Wavefunction n=0 Energy\n",
+      "Wavefunction n=0\n",
       "1\n",
       "visible\n",
       "index:  1\n",
       "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=0 Energy\n",
+      "Squared Wavefunction n=0\n",
       "0\n",
       "not visible\n",
       "index:  3\n",
       "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=1 Energy\n",
+      "Wavefunction n=1\n",
       "1\n",
       "visible\n",
       "index:  5\n",
       "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=1 Energy\n",
+      "Squared Wavefunction n=1\n",
       "0\n",
       "not visible\n",
       "index:  7\n",
       "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=2 Energy\n",
+      "Wavefunction n=2\n",
       "1\n",
       "visible\n",
       "index:  9\n",
       "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=2 Energy\n",
+      "Squared Wavefunction n=2\n",
       "0\n",
       "not visible\n",
       "index:  11\n",
       "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=3 Energy\n",
+      "Wavefunction n=3\n",
       "1\n",
       "visible\n",
       "index:  13\n",
       "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=3 Energy\n",
+      "Squared Wavefunction n=3\n",
       "0\n",
       "not visible\n",
       "index:  15\n",
@@ -589,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ba01307757b4fdd851a1c007e9d8dd1",
+       "model_id": "8cf1d1b0fda54e09b9ff4a97d5916ad8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,7 +622,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b183b3202a6d4e4c8df6f75fd4aaef4d",
+       "model_id": "a5dd1046c8cb490eb0b35f6f495820e9",
        "version_major": 2,
        "version_minor": 0
       },
