--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bb68df331ea486e9b7fc6acac32d8d6",
+       "model_id": "ea38978604e54facab842804be951484",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abf893d46c93499c94ff4fd2200eb60f",
+       "model_id": "edf9f922979849cfacddaaee685e0596",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32127e6a89144fd19d08e4e9cfc5ba67",
+       "model_id": "1b7e4c5193f34837b412bdeefc89ec91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "437fb241674f4197a888e7ecab95c218",
+       "model_id": "e24c0a7bc3074c20805f049440857df6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1376e3353d034b12931d20a6df90b685",
+       "model_id": "d1804bbf20db41798ef4897a08682d18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,14 +322,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  86562.33682426663\n",
-      "2\n"
+      "fitting.value(r):  86562.33682426663\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbacd45d895747eb93b5b1d320847397",
+       "model_id": "fcd7f3d1396642e1b103232a774682ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,74 +433,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Squared Wavefunction n=2\n",
-      "Squared Wavefunction n=2 Energy\n",
-      "Wavefunction n=2\n",
-      "Wavefunction n=2 Energy\n",
-      "Squared Wavefunction n=1\n",
-      "Squared Wavefunction n=1 Energy\n",
-      "Wavefunction n=1\n",
-      "Wavefunction n=1 Energy\n",
-      "Squared Wavefunction n=0\n",
-      "Squared Wavefunction n=0 Energy\n",
-      "Wavefunction n=0\n",
-      "Wavefunction n=0 Energy\n",
-      "12\n",
-      "Squared Wavefunction n=2\n",
-      "Squared Wavefunction n=2 Energy\n",
-      "Wavefunction n=2\n",
-      "Wavefunction n=2 Energy\n",
-      "Squared Wavefunction n=1\n",
-      "Squared Wavefunction n=1 Energy\n",
-      "Wavefunction n=1\n",
-      "Wavefunction n=1 Energy\n",
-      "Squared Wavefunction n=0\n",
-      "Squared Wavefunction n=0 Energy\n",
-      "Wavefunction n=0\n",
-      "Wavefunction n=0 Energy\n",
-      "[0, 1, 2, 3]\n",
-      "1\n",
-      "6\n",
-      "Wavefunction n=0\n",
-      "1\n",
-      "visible\n",
-      "index:  1\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=0\n",
-      "0\n",
-      "not visible\n",
-      "index:  3\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=1\n",
-      "1\n",
-      "visible\n",
-      "index:  5\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=1\n",
-      "0\n",
-      "not visible\n",
-      "index:  7\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=2\n",
-      "1\n",
-      "visible\n",
-      "index:  9\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=2\n",
-      "0\n",
-      "not visible\n",
-      "index:  11\n",
-      "@@@@@@@@@@@@@@@\n",
-      "12\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72bcf85fe6cc4302a28a642c13173ffd",
+       "model_id": "e99e6cbb9b1342dab20f0d3ec14497c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -515,75 +449,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Morse Potential\n",
-      "Squared Wavefunction n=2\n",
-      "Squared Wavefunction n=2 Energy\n",
-      "Wavefunction n=2\n",
-      "Wavefunction n=2 Energy\n",
-      "Squared Wavefunction n=1\n",
-      "Squared Wavefunction n=1 Energy\n",
-      "Wavefunction n=1\n",
-      "Wavefunction n=1 Energy\n",
-      "Squared Wavefunction n=0\n",
-      "Squared Wavefunction n=0 Energy\n",
-      "Wavefunction n=0\n",
-      "Wavefunction n=0 Energy\n",
-      "13\n",
-      "Squared Wavefunction n=2\n",
-      "Squared Wavefunction n=2 Energy\n",
-      "Wavefunction n=2\n",
-      "Wavefunction n=2 Energy\n",
-      "Squared Wavefunction n=1\n",
-      "Squared Wavefunction n=1 Energy\n",
-      "Wavefunction n=1\n",
-      "Wavefunction n=1 Energy\n",
-      "Squared Wavefunction n=0\n",
-      "Squared Wavefunction n=0 Energy\n",
-      "Wavefunction n=0\n",
-      "Wavefunction n=0 Energy\n",
-      "[0, 1, 2, 3]\n",
-      "1\n",
-      "6\n",
-      "Wavefunction n=0\n",
-      "1\n",
-      "visible\n",
-      "index:  1\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=0\n",
-      "0\n",
-      "not visible\n",
-      "index:  3\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=1\n",
-      "1\n",
-      "visible\n",
-      "index:  5\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=1\n",
-      "0\n",
-      "not visible\n",
-      "index:  7\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Wavefunction n=2\n",
-      "1\n",
-      "visible\n",
-      "index:  9\n",
-      "@@@@@@@@@@@@@@@\n",
-      "Squared Wavefunction n=2\n",
-      "0\n",
-      "not visible\n",
-      "index:  11\n",
-      "@@@@@@@@@@@@@@@\n",
-      "13\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b102593d1b2d4b9e9cbef7dccec2c92f",
+       "model_id": "33fce07302de48c0a73900d6b20a45cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,14 +469,13 @@
      "output_type": "stream",
      "text": [
       "wavefunction.value(r):  1080.5165887963026\n",
-      "\n",
-      "1\n"
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d60d7bd9c70643dbbada2eaf7d37ff96",
+       "model_id": "5735da6db44745d1bcaf560288e3566a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -659,74 +526,6 @@
     "\n",
     "#Wavefunctions are graphable objects \n",
     "wavefunctions[2].graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'notebook+plotly_mimetype'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plot.pio.renderers.default"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PlotlyRenderer(config={'modeBarButtonsToAdd': ['drawline', 'drawopenpath', 'drawclosedpath', 'drawcircle', 'drawrect', 'eraseshape']})\n",
-       "\n",
-       "    Renderer to display figures using the plotly mime type.  This renderer is\n",
-       "    compatible with JupyterLab (using the @jupyterlab/plotly-extension),\n",
-       "    VSCode, and nteract.\n",
-       "\n",
-       "    mime type: 'application/vnd.plotly.v1+json'\n",
-       "    "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plot.pio.renderers[\"jupyterlab\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fig' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-df5dd4085b03>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'fig' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "fig "
    ]
   }
  ],
