Prepares for student lab installation
-Adds compChemDependencies.ipynb to allow for automatic installation of library dependencies
-Fixes OS dependent issue in HOW notebook to allow notebook to work on both WIN/*nix systems

--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -167,7 +167,10 @@
    "source": [
     "#Allow Notebook to Import from Comp_Chem_Package\n",
     "import sys\n",
-    "sys.path.append(\"..\\\\Comp_Chem_Package\")\n",
+    "if(\"win\" in sys.platform):\n",
+    "    sys.path.append(\"..\\\\Comp_Chem_Package\")\n",
+    "else: \n",
+    "    sys.path.append(\"../Comp_Chem_Package\")\n",
     "\n",
     "from compChemGlobal import *\n",
     "\n",
@@ -350,7 +353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3489e6a31384dfaaa551046b48b14af",
+       "model_id": "9c3ef17abee34638bc12f752b6663bd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b5b2101269a4a4c9f12d9e9dcd04cc3",
+       "model_id": "b208e66296cd42c9aff0fd781cce9f5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "302b2ee67845425badedc4e21adba790",
+       "model_id": "4abfbbfa526b45b5aa3789fc7a65175f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "168adc07c7de40bea2578bfae16e3765",
+       "model_id": "5085f52393224a5c8924d21e9efdce38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -514,7 +517,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "111d12ff297f4907843b22906397cd9f",
+       "model_id": "c43383cdadee49e5847998434bb41011",
        "version_major": 2,
        "version_minor": 0
       },
@@ -530,7 +533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13b7c0b8434446f29d089527b5cf190d",
+       "model_id": "6e8d98f1acfd44498326265007495067",
        "version_major": 2,
        "version_minor": 0
       },
